--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slint = "1.5"
+slint = "1.5.1"
+image = "0.25.1"
 
 [build-dependencies]
-slint-build = "1.5"
+slint-build = "1.5.1"
